Fix FindBugs warnings